// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildQueryFromString builds a query string even with no keys 1`] = `
{
  "words": [
    "$AND",
    "history",
    "of",
    "asia",
  ],
}
`;

exports[`buildQueryFromString builds a query string even with somewhat unconventional input 1`] = `
{
  "department": [
    "AMCON",
  ],
  "name": [
    "Independence",
  ],
  "times": [
    "TUESDAYS AFTER 12",
  ],
  "year": [
    2014,
  ],
}
`;

exports[`buildQueryFromString builds a query string while deduplicating synonyms of keys 1`] = `
{
  "gereqs": [
    "$AND",
    "HWC",
    "HBS",
  ],
  "semester": [
    3,
  ],
  "year": [
    2014,
  ],
}
`;

exports[`buildQueryFromString builds a query string with multiple keys into a query object 1`] = `
{
  "department": [
    "$AND",
    "CSCI",
    "ASIAN",
  ],
  "level": [
    300,
  ],
  "name": [
    "Parallel",
  ],
  "year": [
    "$OR",
    2013,
    2014,
  ],
}
`;

exports[`buildQueryFromString builds a query string with variable-case keys into a query object 1`] = `
{
  "department": [
    "$AND",
    "ASIAN",
    "REL",
  ],
  "level": [
    200,
  ],
  "semester": [
    "$OR",
    3,
    1,
  ],
  "title": [
    ""Japan*"",
  ],
  "year": [
    2014,
  ],
}
`;

exports[`buildQueryFromString can also search for deptnums even with no keys 1`] = `
{
  "department": [
    "ASIAN",
  ],
  "number": [
    220,
  ],
}
`;

exports[`buildQueryFromString can also search for deptnums with sections even with no keys 1`] = `
{
  "department": [
    "AS/RE",
  ],
  "number": [
    220,
  ],
  "section": [
    "A",
  ],
}
`;

exports[`buildQueryFromString conjoins a deptnum and a department key 1`] = `
{
  "department": [
    "$AND",
    "MUSIC",
    "AR/AS",
  ],
  "number": [
    102,
  ],
}
`;

exports[`buildQueryFromString handles a otherwise-valid string that ends with a colon 1`] = `
{
  "deptnum": [
    "ENGL 200",
  ],
}
`;

exports[`buildQueryFromString handles a single key and no value 1`] = `
{
  "department": [
    "ENGL",
  ],
  "number": [
    200,
  ],
}
`;

exports[`buildQueryFromString handles a string that ends with a colon 1`] = `
{
  "deptnum": [
    "ENGL 200 VALID",
  ],
}
`;

exports[`buildQueryFromString handles an empty string 1`] = `{}`;

exports[`buildQueryFromString handles an invalid second arg 1`] = `{}`;

exports[`buildQueryFromString handles multiple colons in a querystring 1`] = `
{
  "csci": [
    "helloworld",
  ],
  "test": [
    "foo",
  ],
}
`;

exports[`buildQueryFromString handles no arguments as an empty string 1`] = `{}`;

exports[`buildQueryFromString ignores subsequent deptnums in a non-keyed query 1`] = `
{
  "department": [
    "AS/RE",
  ],
  "number": [
    220,
  ],
  "section": [
    "A",
  ],
}
`;

exports[`buildQueryFromString infers $AND from a list of multiple things 1`] = `
{
  "year": [
    "$AND",
    2010,
    2011,
    2012,
    2013,
    2014,
  ],
}
`;

exports[`buildQueryFromString makes professors properly title-cased 1`] = `
{
  "instructors": [
    "Katherine Tegtmeyer-pak",
  ],
}
`;

exports[`buildQueryFromString makes professors properly title-cased 2`] = `
{
  "profWords": [
    "$AND",
    "katherine",
    "tegtmeyer",
    "pak",
  ],
}
`;

exports[`buildQueryFromString makes professors properly title-cased 3`] = `
{
  "instructors": [
    "olaf a. hall-holt",
  ],
}
`;

exports[`buildQueryFromString makes professors properly title-cased 4`] = `
{
  "profWords": [
    "$AND",
    "olaf",
    "a",
    "hall",
    "holt",
  ],
}
`;

exports[`buildQueryFromString maps multiple multi-word queries to the same words array 1`] = `
{
  "words": [
    "$AND",
    "japan",
    "otaku",
  ],
}
`;

exports[`buildQueryFromString parses credits correctly 1`] = `
{
  "credits": [
    "$OR",
    1,
    0.25,
  ],
}
`;

exports[`buildQueryFromString removes duplicate values for a key 1`] = `
{
  "credits": [
    "$OR",
    1,
    0.25,
  ],
}
`;

exports[`buildQueryFromString returns an empty object when given nothing but whitespace 1`] = `{}`;

exports[`buildQueryFromString returns an empty object when given nothing but whitespace 2`] = `{}`;

exports[`buildQueryFromString returns an empty object when given nothing but whitespace 3`] = `{}`;

exports[`buildQueryFromString returns an empty object when given nothing but whitespace 4`] = `{}`;

exports[`buildQueryFromString returns an empty object when given nothing but whitespace 5`] = `{}`;

exports[`buildQueryFromString sorts a five-year token string correctly 1`] = `
{
  "year": [
    "$OR",
    2010,
    2011,
    2012,
    2013,
    2014,
  ],
}
`;

exports[`buildQueryFromString turns pf from a "true" string into a boolean 1`] = `
{
  "pf": [
    true,
  ],
}
`;
